2007-10-08  Akim Demaille  <demaille@gostai.com>

	Disable invariant.
	* contract.hh: Disable, there is a member with the same name
	in uvar.hh.

2007-10-08  Akim Demaille  <demaille@gostai.com>

	DISABLE_DEBUG_TRACES.
	* compiler.hh (ECHO): If DISABLE_DEBUG_TRACES, do nothing.

2007-10-04  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Provide replacement implementations for `trunc'.
	* ufloat.hh [!LIBPORT_HAVE_TRUNC]: Here.
	* ufloat.h [!LIBPORT_HAVE_TRUNC]: Import `trunc' in the global
	namespace.

2007-10-03  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Include `libport/config.h' instead of `config.h'.
	* ufloat.h,
	* ufloat.hh: Adjust includes and fix a couple of Doxygen comments.

2007-10-03  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Use config.h to know whether HAVE_ROUND.
	* ufloat.h,
	* ufloat.hh: Here.

2007-10-03  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Add replacement implementation of `round'.
	* ufloat.hh [!HAVE_ROUND]: Provide replacement implementations of
	round for float, double and long double.
	* ufloat.h [!HAVE_ROUND]: Import in the top-level namespace the
	libport implementation of `round'.

2007-10-03  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Properly invoke std::abort.
	* assert.hh (__pabort, __passert): Here.

2007-09-20  Guillaume Deslandes  <deslandes@gostai.com>

	Fix libport.la location and add header to test
	* tests/Makefile.am: Fix libport location.
	* tests/test-indent.cc: Add missing header.

2007-09-17  HUMBERT Remi <humbert@gostai.com>

	* hash.hh: Comment a trailing 'namespace' keyword.

2007-09-09  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Remove the wrapper around Boost.Foreach.
	This won't work because the Boost.Foreach released with 1.33.1 takes
	3 arguments and can't be made compatible with that of 1.34.  I must
	have tested too quickly to not notice this.
	* Makefile.am: Remove the file.
	* foreach.hh: Remove.

2007-09-09  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Add a wrapper header for Boost.Foreach.