@@ -6,7 +6,8 @@
 #ifndef LIBPORT_SHARED_REF_HH
 # define LIBPORT_SHARED_REF_HH
 
-# include <boost/shared_ptr.hpp>
+# ifndef NO_BOOST
+#  include <boost/shared_ptr.hpp>
 
 namespace libport
 {
@@ -94,6 +95,7 @@ namespace libport
 
 }
 
-# include "libport/shared-ptr.hxx"
+#  include "libport/shared-ptr.hxx"
 
+# endif // !NO_BOOST
 #endif // !LIBPORT_SHARED_REF_HH
